# rust-posix-ipc

./: Cargo.toml  README.md
src/: lib.rs  mmap.rs  sem.rs  shm.rs
src/sem/: mod.rs  named.rs  unnamed.rs
